--- a/GoodGUI/GPTMDTaskWindow.xaml
+++ b/GoodGUI/GPTMDTaskWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="GoodGUI.CalibrateTaskWindow"
+﻿<Window x:Class="GoodGUI.GPTMDTaskWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GoodGUI"
         mc:Ignorable="d"
-        Title="Search Task" Width="450" Height="600" WindowStartupLocation="CenterScreen">
+        Title="GPTMD Task" Width="450" Height="600" WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel>
             <TabControl Name ="taskTabControl" SelectedIndex="0" DockPanel.Dock="Top" Height="200">
