--- a/GoodGUI/CalibrateTaskWindow.xaml
+++ b/GoodGUI/CalibrateTaskWindow.xaml
@@ -5,8 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GoodGUI"
         mc:Ignorable="d"
-        Title="CalibrateTaskWindow" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+        Title="CalibrateTaskWindow" Width="550" Height="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <StackPanel>
+        <Label Content="Search Parameters:" Height="30" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label x:Name="label1" Content="Max Missed Cleavages" />
+                    <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label x:Name="label_Copy" Content="Protease" />
+                    <ComboBox x:Name="proteaseComboBox" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                    <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label x:Name="label1_Copy" Content="Initiator Methionine" />
+                    <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                    <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label x:Name="label4" Content="Ions to search" />
+                    <CheckBox x:Name="bCheckBox" Content="b ions" />
+                    <CheckBox x:Name="yCheckBox" Content="y ions" />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+        <DataGrid x:Name="modificationsDataGrid" ItemsSource="{Binding}" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="150" SelectionMode="Single" />
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button x:Name="cancelButton" Content="Cancel" Click="cancelButton_Click" />
+            <Button x:Name="saveButton" Content="Save" Click="saveButton_Click" />
+        </StackPanel>
+    </StackPanel>
 </Window>
