--- a/GoodGUI/CalibrateTaskWindow.xaml
+++ b/GoodGUI/CalibrateTaskWindow.xaml
@@ -8,6 +8,11 @@
         Title="CalibrateTaskWindow" Width="550" Height="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <StackPanel>
         <Label Content="Search Parameters:" Height="30" />
+        <StackPanel Orientation="Horizontal" Margin="5">
+            <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
+            <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+            <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
+        </StackPanel>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
