--- a/MetaMorpheusGUI/MainWindow.xaml
+++ b/MetaMorpheusGUI/MainWindow.xaml
@@ -30,6 +30,7 @@
                         </DataGrid>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="AddXML" Content="Add" Click="AddXML_Click" />
+                            <Button x:Name="ClearXML" Content="Clear" Click="ClearXML_Click" />
                         </StackPanel>
                     </StackPanel>
                 </Border>
