--- a/MetaMorpheusGUI/CalibrateTaskWindow.xaml
+++ b/MetaMorpheusGUI/CalibrateTaskWindow.xaml
@@ -40,7 +40,7 @@
                 <StackPanel Orientation="Horizontal" Margin="5">
                     <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
                     <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                    <Label x:Name="label2_Cdfopy" Content="Daltons" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="5">
                     <Label x:Name="label4" Content="Ions to search" />
