--- a/MetaMorpheusGUI/CalibrateTaskWindow.xaml
+++ b/MetaMorpheusGUI/CalibrateTaskWindow.xaml
@@ -58,7 +58,7 @@
         </DataGrid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button x:Name="cancelButton" Content="Cancel" Click="cancelButton_Click" />
-            <Button x:Name="saveButton" Content="Save Calibrate Task" Click="saveButton_Click" />
+            <Button x:Name="saveButton" Content="Save Calibrate Task" Click="saveButton_Click" FontSize="24" Margin="10" />
         </StackPanel>
     </StackPanel>
 </Window>
