--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -11,7 +11,7 @@
         <StackPanel Orientation="Horizontal" Margin="5">
             <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
             <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-            <Label x:Name="precursorMassToleranceLabel2" Content="Daltons" />
+            <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
         </StackPanel>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -40,8 +40,8 @@
                 <StackPanel Orientation="Horizontal" Margin="5">
                     <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
                     <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                    <Label x:Name="label2_Cdfopy" Content="Daltons" />
-                </StackPanel>
+                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                    </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="5">
                     <Label x:Name="label4" Content="Ions to search" />
                     <CheckBox x:Name="bCheckBox" Content="b ions" />
