--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -93,6 +93,9 @@
                             </Style>
                         </DataGrid.Resources>
                     </DataGrid>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button x:Name="ClearOutput" Content="Clear" Click="ClearOutput_Click" />
+                    </StackPanel>
                 </StackPanel>
             </Border>
             <StackPanel x:Name="RightPanel"  Grid.Column="1">
